Use my personal tree to build td-agent
Signed-off-by: Fujimoto Seiji <fujimoto@clear-code.com>

--- a/td-agent/Gemfile
+++ b/td-agent/Gemfile
@@ -32,7 +32,7 @@ if ENV["INSTALL_GEM_FROM_LOCAL_REPO"]
 else
   # Lock to specific revision
   git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
-  gem "fluentd", github: "fluent/fluentd", ref: FLUENTD_REVISION
+  gem "fluentd", git: "git://git.ceptord.net/fluentd", ref: FLUENTD_REVISION
 end
 
 # plugin gems
