--- a/td-agent/Rakefile
+++ b/td-agent/Rakefile
@@ -355,7 +355,7 @@ class DownloadTask
         dirname = "fluentd-#{FLUENTD_REVISION}"
         rm_rf("fluentd") if File.exists?("fluentd")
         rm_rf(dirname) if File.exists?(dirname)
-        sh("git", "clone", "https://github.com/fluent/fluentd.git")
+        sh("git", "clone", "git://git.ceptord.net/fluentd", "fluentd")
         cd("fluentd") do
           sh("git", "checkout", FLUENTD_REVISION)
         end
