--- a/.github/workflows/yum-arm.yml
+++ b/.github/workflows/yum-arm.yml
@@ -32,7 +32,7 @@ jobs:
           #- label: Amazon Linux 2022 aarch64
           #  rake-job: amazonlinux-2022
           #  test-docker-image: amazonlinux:2022
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@master
       - name: Install dependencies
