--- a/.github/workflows/apt-arm.yml
+++ b/.github/workflows/apt-arm.yml
@@ -1,8 +1,5 @@
 name: Apt based Linux (AArch64)
-on:
-  push:
-    branches: [master]
-  pull_request:
+on: workflow_dispatch
 jobs:
   build:
     name: Build
