Shrink GitHub Actions' artifact in size by 70%
Signed-off-by: Fujimoto Seiji <fujimoto@clear-code.com>

--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: packages-${{ matrix.rake-job }}
-          path: td-agent/apt/repositories
+          path: td-agent/apt/repositories/**/td-agent_*.deb
       - name: Upload td-agent-apt-source deb
         uses: actions/upload-artifact@master
         with:
